# draconisplusplus-plugins

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  LICENSE  README.md  flake.nix  meson.build  meson.options
json_format/: json_format.cpp  plugin.json
markdown_format/: markdown_format.cpp  plugin.json
now_playing/: now_playing.cpp  now_playing_macos.mm  plugin.json
plugins/: meson.build
plugins/json_format/: json_format.cpp  meson.build  plugin.json
plugins/markdown_format/: markdown_format.cpp  meson.build  plugin.json
plugins/now_playing/: meson.build  now_playing.cpp  now_playing_macos.mm  now_playing_types.hpp  plugin.json
plugins/weather/: WeatherConfig.hpp  meson.build  plugin.json  weather.cpp
plugins/yaml_format/: meson.build  plugin.json  ryml_all.hpp  yaml_format.cpp
subprojects/: curl.wrap  glaze.wrap  magic_enum.wrap  mimalloc.wrap
weather/: WeatherConfig.hpp  plugin.json  weather.cpp
yaml_format/: plugin.json  ryml_all.hpp  yaml_format.cpp
